# model_big

./: Body(fixed).SLDASM  CMakeLists.txt  package.xml
config/: joint_names_Al profile 개선.yaml
launch/: display.launch  gazebo.launch
meshes/: LBS.STL  LBW.STL  LFW.STL  RBS.STL  RFS.STL  RFW.STL  base_link.STL  bcam.STL  fcam.STL  imu_link.STL
urdf/: Al profile 개선.csv  Al profile 개선.urdf
